--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,32 @@ env:
 matrix:
   include:
     - language: go
+      arch: s390x
+      name: Code Lint
+      go: 1.13.4
+      env:
+        - TESTSUITE=lintall
+      before_install:
+        - sudo apt-get install -y libvirt-dev
+      script: make test
+
+    - language: go
+      arch: s390x 
+      name: Unit Test
+      go: 1.13.4
+      env:
+        - TESTSUITE=unittest
+      before_install:
+        - sudo apt-get install -y libvirt-dev
+      script: make test
+
+    - language: go
+      arch: s390x
+      name: Build
+      go: 1.13.4
+      script: make
+
+    - language: go
       name: Code Lint
       go: 1.13.4
       env:
@@ -35,6 +61,9 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 travisBuddy:
     regex: (FAIL:|\.go:\d+:|^panic:|failed$)
+
+branch_only:
+  - s390x-travis
 notifications:
   webhooks:
     urls:
